RESOLVED FIXED 284412
TimerBase Crash under ~ScrollbarsControllerMac() when tearing down the PDFPlugin
https://bugs.webkit.org/show_bug.cgi?id=284412
Summary TimerBase Crash under ~ScrollbarsControllerMac() when tearing down the PDFPlugin
Abrar Rahman Protyasha
Reported 2024-12-10 15:33:02 PST
Attachments
Abrar Rahman Protyasha
Comment 1 2024-12-10 15:46:01 PST
EWS
Comment 2 2024-12-10 22:10:13 PST
Committed 287655@main (51f1c2bf89c7): <https://commits.webkit.org/287655@main> Reviewed commits have been landed. Closing PR #37746 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.