TimerBase Crash under ~ScrollbarsControllerMac() when tearing down the PDFPlugin https://bugs.webkit.org/show_bug.cgi?id=284412 rdar://141179510

Reviewed by Simon Fraser.

It is possible for the PDF plugin to be torn down off the main thread if
the stream fails during an incremental load. This leads to a release
assert in the TimerBase destructor which verifies that the current
thread was used to construct the timer.

We fix this by ensuring the plugin hops to the main thread during tear
down.

I was unable to write a test, though this crash likely reproduces when a
loading stream fail races against the user navigating away from a PDF
document.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h:

Canonical link: https://commits.webkit.org/287655@main